--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,7 +19,7 @@
   body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,p,table,th,td,form,fieldset,legend,textarea,input,select,textarea,button{margin:0;padding:0}
   html,body{height:100%}
   html{font-size:10px}
-  body,button,input,select,textarea,a{font-family:'Quicksand',sans-serif;color:$text-color}
+  body,button,input,select,textarea,a{font-family:'Quicksand',sans-serif;font-size:1.4rem;color:$text-color}
   h1,h2,h3,h4,h5,h6{font-weight:normal}
   fieldset,li,img{border:0;vertical-align:top}
   ul,ol{list-style:none}
@@ -34,4 +34,10 @@
   .wrap{
     max-width: 2560px;
     margin: 0 auto;
+  }
+
+  .btn{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
   }
