--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -85,9 +85,8 @@
   .input_control{
     width: 100%;
     height: 4rem;
-    padding: 0 1.5rem;
+    padding: 0 5.5rem 0 1.5rem;
     border: none;
-    outline: none;
   }
 }
 
