--- a/styles/SignIn.module.scss
+++ b/styles/SignIn.module.scss
@@ -46,6 +46,9 @@
 
 .btn {
   &_wrap {
+    display: flex;
+    align-items: center;
+    gap: 5rem;
     margin-top: 2rem;
   }
 }
@@ -54,6 +57,11 @@
   &_control {
     margin-top: 1rem;
     text-align: center;
+  }
+
+  &_message {
+    flex: 1;
+    text-align: right;
   }
 }
 
@@ -69,6 +77,7 @@
   &_with {
     margin-top: 2rem;
   }
+
   &_list {
     display: flex;
     gap: 2rem;
