feature reset password

--- a/styles/Forgot.module.scss
+++ b/styles/Forgot.module.scss
@@ -25,6 +25,11 @@
 
 .btn_wrap {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin-top: 2rem;
+}
+
+.form_message {
+  margin-top: 1.5rem;
 }
