--- a/components/loader/barLoader.module.scss
+++ b/components/loader/barLoader.module.scss
@@ -13,6 +13,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
