--- a/styles/base.scss
+++ b/styles/base.scss
@@ -2,6 +2,7 @@ $text-color: #000;
 $icon-color: #666;
 $white-color: #fff;
 $gray-color: #f2f2f2;
+$black-color: #000;
 $red-color: #ff0000;
 $blue-color: #007bff;
 $inner-padding: 4rem;
