--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -149,3 +149,108 @@ legend {
   height: 100%;
   object-fit: cover;
 }
+
+.list {
+  &_common {
+    max-width: 1440px;
+    padding: 6rem 4rem;
+    margin: 0 auto;
+
+    .item {
+      flex: 0 0 25%;
+      max-width: 25%;
+      border: 1px solid transparent;
+      transition: 0.2s;
+
+      &:hover {
+        border-color: $gray-color;
+
+        .item_control {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+
+      &_thumb {
+        padding: 2rem;
+      }
+
+      &_color {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+
+        .color {
+          width: 3rem;
+        }
+        & + .item_name {
+          margin-top: 1rem;
+        }
+      }
+
+      &_content {
+        position: relative;
+        padding-bottom: 6rem;
+        text-align: center;
+      }
+
+      &_name {
+        display: block;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+
+      &_price {
+        display: block;
+        margin-top: 0.5rem;
+      }
+
+      &_control {
+        display: flex;
+        visibility: hidden;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 4rem;
+        background-color: $black-color;
+        opacity: 0;
+        transition: 0.2s;
+      }
+
+      .btn {
+        height: 100%;
+        flex: 1;
+        gap: 0.5rem;
+        color: $white-color;
+
+        & + .btn {
+          position: relative;
+          &::after {
+            position: absolute;
+            left: 0;
+            top: 20%;
+            width: 1px;
+            height: 60%;
+            background-color: $white-color;
+            content: "";
+          }
+        }
+      }
+    }
+  }
+
+  &_title {
+    font-size: 3rem;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+
+  &_area {
+    display: flex;
+    margin-top: 3rem;
+    gap: 3rem;
+  }
+}
