--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -130,6 +130,11 @@ legend {
   margin: 0 auto;
 }
 
+.inner {
+  padding: 0 4rem;
+  margin: 0 auto;
+}
+
 .btn {
   display: inline-flex;
   align-items: center;
@@ -149,6 +154,55 @@ legend {
   height: 100%;
   object-fit: cover;
 }
+
+.thumb {
+  width: 100%;
+  .img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+// .swiper {
+//   width: 100%;
+//   height: 300px;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
+
+// .swiper-slide {
+//   background-size: cover;
+//   background-position: center;
+// }
+
+// .mySwiper2 {
+//   height: 80%;
+//   width: 100%;
+// }
+
+// .mySwiper {
+//   height: 20%;
+//   box-sizing: border-box;
+//   padding: 10px 0;
+// }
+
+// .mySwiper .swiper-slide {
+//   width: 25%;
+//   height: 100%;
+//   opacity: 0.4;
+// }
+
+// .mySwiper .swiper-slide-thumb-active {
+//   opacity: 1;
+// }
+
+// .swiper-slide img {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
 
 .list {
   &_common {
@@ -261,5 +315,12 @@ legend {
     display: flex;
     margin-top: 3rem;
     gap: 3rem;
+  }
+}
+
+.path {
+  &_item {
+    display: inline-flex;
+    align-items: center;
   }
 }
