--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -1,3 +1,12 @@
-.product_detail {
-  margin-top: 2rem;
+.product {
+  &_detail {
+    margin-top: 2rem;
+  }
+
+  &_wrap {
+    max-width: 1300px;
+    padding: 0 4rem;
+    margin: 5rem auto 0;
+    box-sizing: border-box;
+  }
 }
